@@ -40,6 +40,7 @@ hadoop-hdfs.version=0.23.1-SNAPSHOT
 hadoop-mapreduce.version=0.23.1-SNAPSHOT
 hbase.version=0.90.0
 hsqldb.version=1.8.0.10
+hive.version=0.8.0
 jackson.version=1.7.3
 javacc.version=4.2
 jdeb.version=0.8
